--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,10 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "App\\": "App/"
+            "App\\": "app/",
+            "Config\\": "config/",
+            "Core\\": "core/"
+
         }
     },
     "authors": [
@@ -18,6 +21,7 @@
     "require": {
         "phpauth/phpauth": "^1.5",
         "altorouter/altorouter": "^2.0",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "delight-im/auth": "^8.3"
     }
 }
