--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "phpauth/phpauth": "^1.5",
         "altorouter/altorouter": "^2.0",
         "vlucas/phpdotenv": "^5.6",
-        "delight-im/auth": "^8.3"
+        "delight-im/auth": "^8.3",
+        "ezyang/htmlpurifier": "^4.18",
+        "vlucas/valitron": "^1.4"
     }
 }
